# FlaskGpt

./: app.py  pyproject.toml
templates/: chat.html  index.html
