[project]
name = "flaskgpt"
version = "0.1.0"
description = "ChatGpt clone using Flask"
authors = [
    {name = "Arnel",email = "167875243+Arnel-rah@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
